@@ -6,7 +6,7 @@
 	Other RVOUS actions for TOC/Oscar
 	File transfer for IRC?  Maybe later?
 	Jabber Transports
-	Jabber/ICQ/Napster user registration
+	ICQ/Napster user registration
 
 	Rename for groups/buddies
 	Status labels in buddy list (mostly just for yahoo)
